--- a/work/03_数据绑定语法/05_数据绑定语法.html
+++ b/work/03_数据绑定语法/05_数据绑定语法.html
@@ -26,12 +26,39 @@
       @keyup.enter='xxx'
 -->
 <div id="app">
+  <h1>1. 表达式</h1>
+    <p>{{msg}}</p>
+    <p>{{{msg}}}</p>
+    <p>{{msg.toUpperCase()}}</p>
+    <p>{{msg | lowercase}}</p>
 
+  <h1>2. 强制数据绑定</h1>
+  <a :href="url">尚硅谷</a>
+  <a href="{{url}}">尚硅谷</a>
 
+  <h2>3. 事件监听</h2>
+  <input type="text" @keyup.enter="test1">
+  <input type="text" @keyup.enter="test2(3, $event)">
 </div>
+
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el : '#app',
+    data : {
+      msg: '<a href="http://www.atguigu.com">尚硅谷AAAA</a>',
+      url: 'http://www.atguigu.com'
+    },
+    methods : {
+      test1(event) { //默认会传一个event对象
+        alert(event.target.value)
+      },
+      test2 (number, event) {
+        alert(number+event.target.value)
+      }
+    }
+  })
 </script>
 </body>
 </html>
