--- a/work/04_计算属性/06_计算属性.html
+++ b/work/04_计算属性/06_计算属性.html
@@ -16,15 +16,88 @@
     通过get/set方法实现对属性数据的显示和监视
 -->
 <div id="demo">
-  姓: <input type="text" placeholder="First Name"><br>
-  名: <input type="text" placeholder="Last Name"><br>
-  姓名1(单向): <input type="text" placeholder="Full Name"><br>
-  姓名2(单向): <input type="text" placeholder="Full Name"><br>
-  姓名3(双向): <input type="text" placeholder="Full Name2"><br>
+  姓: <input type="text" placeholder="First Name" v-model="firstName"><br>
+  名: <input type="text" placeholder="Last Name" v-model="lastName"><br>
+  姓名1(单向): <input type="text" placeholder="Full Name" v-model="fullName1"><br>
+  姓名2(单向): <input type="text" placeholder="Full Name" v-model="fullName2"><br>
+  姓名3(双向): <input type="text" placeholder="Full Name2" v-model="fullName3"><br>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  const vm = new Vue({
+    el : '#demo',
+    data : {
+      firstName: 'Kobe',
+      lastName: 'Byrant',
+      fullName2: 'Kobe-Byrant'
+    },
+    methods : {
+
+    },
+
+    computed : { //用来定义计算属性
+      fullName1 () {
+        console.log('fullName1()')
+        return this.firstName + '-' + this.lastName
+      },
+      fullName3: {
+        get () {
+          return this.firstName + '-' + this.lastName
+        },
+        set(value) {
+          var names = value.split('-')
+          this.firstName = names[0]
+          this.lastName = names[1]
+        }
+      }
+    }
+  })
+
+  //监视firstName/lastName
+  vm.$watch('firstName', function (val) {
+    //更新fullName2
+    this.fullName2 = val + '-' + this.lastName
+  })
+  vm.$watch('lastName', function (val) {
+    //更新fullName2
+    this.fullName2 = this.firstName + '-' + val
+  })
+
+  var obj = {
+    firstName: 'xxx',
+    lastName: 'yyyy',
+    set fullName (value) {
+      var names = value.split('-')
+      this.firstName = names[0]
+      this.lastName = names[1]
+    },
+    get fullName () {
+      return this.firstName + '-' + this.lastName
+    }
+  }
+  console.log(obj.fullName)
+  obj.firstName = 'zzzz'
+  console.log(obj.fullName)
+  obj.fullName = 'ttt-aaaa'
+  console.log(obj.firstName, obj.lastName)
+
+  Object.defineProperty(obj, 'fullName2', {
+    get: function () {
+      return this.firstName + '-' + this.lastName
+    },
+    set: function (value) {
+      var names = value.split('-')
+      this.firstName = names[0]
+      this.lastName = names[1]
+    }
+  })
+
+  console.log(obj.fullName2)
+  obj.firstName = 'wwww'
+  console.log(obj.fullName2)
+  obj.fullName2 = 'sss-dddd'
+  console.log(obj.firstName, obj.lastName)
 
 </script>
 </body>
