--- a/work/05_class与style绑定/07_class与style绑定.html
+++ b/work/05_class与style绑定/07_class与style绑定.html
@@ -3,20 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>07_Class与Style绑定</title>
+  <style>
+    .classA {
+      color: red;
+    }
+    .classB {
+      background: blue;
+    }
+  </style>
 </head>
 <body>
 
 <!--
   动态绑定class
+    class="a b c"
     :class="a" a是一个data属性
     :class="{ 'class-a': isA, 'class-b': isB }"   其中isA/isB是布尔型data属性
     :class="[classA, classB]" 其中classA/classB是字符串值
   动态绑定style
     :style="{ color: activeColor, fontSize: fontSize + 'px' }"  其中activeColor/fontSize是data属性
 -->
+  <div id="demo">
+    <p :class="a">绑定class: 值是一个变量</p>
+    <p :class="{classA:isA, classB: isB}">绑定class: 值是一个对象</p>
+    <p :class="['classA', 'classB']">绑定class: 值是一个数组</p>
+    <br>
+    <p><button @click="changeClass">修改样式</button></p>
+    <br>
+
+    <p :style="myStyle">绑定style: 值是一个变量</p>
+    <p :style="{color: color, fontSize: fontSize+'px'}">绑定style: 值是一个对象</p>
+
+  </div>
+
+
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el: '#demo',
+    data: {
+      a: 'classA classB',
+      isA: true,
+      isB: false,
+      myStyle: {
+        color: 'red',
+        fontSize: '25px'
+      },
+      color: 'blue',
+      fontSize: 30
+    },
+
+    methods: {
+      changeClass () {
+        this.a = 'classA'
+        this.isA = false
+        this.isB = true
+        this.myStyle.color = 'yellow'
+        this.fontSize = 40
+      }
+    }
+  })
 </script>
 </body>
 </html>
