--- a/prepare/07_列表渲染/09_列表渲染.html
+++ b/prepare/07_列表渲染/09_列表渲染.html
@@ -22,7 +22,7 @@
       --
       <button @click="deleteItem(p)">删除</button>
       --
-      <button @click="updateItem(p, {name:'Jok',age:15})">更新</button>
+      <button @click="updateItem(p, {id:Date.now(), name:'Jok',age:15})">更新</button>
     </li>
   </ul>
 
