--- a/work/07_列表渲染/09_列表渲染.html
+++ b/work/07_列表渲染/09_列表渲染.html
@@ -16,12 +16,54 @@
 <div id="demo">
 
   <h2>测试: v-for 遍历数组</h2>
+  <ul>
+    <li v-for="p in persons | filterBy 'o' in 'name'">
+      {{$index}}---{{p.name}}---{{p.age}}---{{p.id}}
+      <!--&#45;&#45;<button @click="deletePerson($index)">删除</button>-->
+      --<button @click="deletePerson(p)">删除</button>
+      --<button @click="updatePerson(p, {id:Date.now(), name:'ABCo', age:33})">更新</button>
+    </li>
+  </ul>
 
   <h2>测试: v-for 遍历对象</h2>
+  <ul>
+    <li v-for="value in persons[0]">
+      {{$key}}----{{value}}
+    </li>
+  </ul>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  new Vue({
+    el: '#demo',
+    data: {
+      persons: [
+        {id:1, name:'Tom', age:12},
+        {id:2, name:'Jack', age:14},
+        {id:3, name:'Bob', age:13},
+        {id:4, name:'Rose', age:15},
+      ]
+    },
+    methods: {
+     /* deletePerson (index) { //不可用
+        this.persons.splice(index, 1)
+      }*/
+      deletePerson (p) {
+        /* //可用, 但有点麻烦
+        var index = this.persons.indexOf(p)
+        this.persons.splice(index, 1)
+        */
+        this.persons.$remove(p)
+      },
+
+      updatePerson (oldP, newP) {
+        var index = this.persons.indexOf(oldP)
+        // this.persons[index] = newP
+        this.persons.$set(index, newP)
+      }
+    }
+  })
 </script>
 </body>
 </html>
