--- a/work/09_表单控件绑定/11_表单控件绑定.html
+++ b/work/09_表单控件绑定/11_表单控件绑定.html
@@ -15,7 +15,44 @@
 3. 延迟指定时间才更新: debounce='1000'
 -->
 <div id="demo">
+  <span>Message is:</span><br>
+  <input type="text"><br>
+  <textarea></textarea>
 
+  <hr>
+  <input type="checkbox" id="checkbox">
+  <label for="checkbox"></label>
+
+  <hr>
+  <input type="checkbox" id="jack">
+  <label for="jack">Jack</label>
+  <input type="checkbox" id="john">
+  <label for="john">John</label>
+  <input type="checkbox" id="mike">
+  <label for="mike">Mike</label>
+  <br>
+  <span>Checked names:</span>
+
+  <hr>
+  <input type="radio" id="female">
+  <label for="female">MALE</label>
+  <br>
+  <input type="radio" id="male">
+  <label for="male">FEMALE</label>
+  <br>
+  <span>Sex:</span>
+
+  <hr>
+  <select>
+    <option value="">未选择</option>
+  </select>
+  <span>selection:</span>
+
+  <hr>
+  <input placeholder="失去焦点才更新">
+  <p>输入的数据为:</p>
+  <input placeholder="延迟1s更新">
+  <p>输入的数据为:</p>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
