--- a/work/09_表单控件绑定/11_表单控件绑定.html
+++ b/work/09_表单控件绑定/11_表单控件绑定.html
@@ -61,7 +61,7 @@
   new Vue({
     el : '#demo',
     data : {
-      msg: 'atguigu.com',
+      msg: '尚硅谷',
       like: true,
       names: ['JOHN'],
       sex: 'FEMALE',
