--- a/prepare/09_表单控件绑定/11_表单控件绑定.html
+++ b/prepare/09_表单控件绑定/11_表单控件绑定.html
@@ -20,8 +20,8 @@
   <textarea v-model="message"></textarea>
 
   <hr>
-  <input type="checkbox" id="checkbox" v-model="checked">
-  <label for="checkbox">{{checked}}</label>
+  <input type="checkbox" id="checkbox" v-model="tt" >
+  <label for="checkbox">{{tt}}</label>
 
   <hr>
   <input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
@@ -67,7 +67,7 @@
     el: '#demo',
     data: {
       message: 'atguigu',
-      checked: false,
+      tt: true,
       checkedNames: [],
       sex: 'female',
       selection: '',
