--- a/work/10_过渡/12_动画2.html
+++ b/work/10_过渡/12_动画2.html
@@ -3,14 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <title>12_动画2</title>
+  <style>
+    .bounce-transition {
+      display: inline-block; /* 否则 scale 动画不起作用 */
+    }
+    .bounce-enter {
+      animation: bounce-in .5s;
+    }
+    .bounce-leave {
+      animation: bounce-out .5s;
+    }
+    @keyframes bounce-in {
+      0% {
+        transform: scale(0);
+      }
+      50% {
+        transform: scale(1.5);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+    @keyframes bounce-out {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.5);
+      }
+      100% {
+        transform: scale(0);
+      }
+    }
+  </style>
 </head>
 <body>
 
-<div id="anim" class="demo">
+<div id="anim">
+  <span v-if="show" transition="bounce">Look at me!</span>
+  <br>
+  <button @click="show=!show">切换</button>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script>
+  new Vue({
+    el : '#anim',
+    data : {
+      show: true
+    }
+  })
 </script>
 </body>
 </html>
