--- a/work/10_过渡/12_动画3.html
+++ b/work/10_过渡/12_动画3.html
@@ -3,16 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <title>12_动画3</title>
+  <style>
+    ul {
+      padding-left: 0;
+      font-family: Helvetica, Arial, sans-serif;
+    }
+    .staggered-transition {
+      transition: all .5s ease;
+      overflow: hidden;
+      margin: 0;
+      height: 20px;
+    }
+    .staggered-enter, .staggered-leave {
+      opacity: 0;
+      height: 0;
+    }
+  </style>
 </head>
 <body>
 
 <div id="demo">
-
+  <input v-model="query">
+  <ul>
+    <li v-for="item in list | filterBy query"
+        transition="staggered"
+        stagger="100">
+      {{item.msg}}
+    </li>
+  </ul>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script>
-
+  new Vue({
+    el: '#demo',
+    data: {
+      query: '',
+      list: [
+        { msg: 'Bruce Lee' },
+        { msg: 'Jackie Chan' },
+        { msg: 'Chuck Norris' },
+        { msg: 'Jet Li' },
+        { msg: 'Kung Fury' }
+      ]
+    }
+  })
 </script>
 </body>
 </html>
