--- a/work/13_过滤器/15_自定义过滤器.html
+++ b/work/13_过滤器/15_自定义过滤器.html
@@ -25,11 +25,28 @@
 
 <div id="example">
   <!--过滤器reverse: 对指定值进行倒序显示-->
+  <p>{{msg | reverse}}</p>
   <!--过滤器wrap: 在指定值的左侧和右侧添加指定的文本-->
+  <p>{{msg | wrap '受不了' '你还喜欢他'}}</p>
 </div>
 
 <script type="text/javascript" src="../js/vue.js"></script>
 <script type="text/javascript">
+  Vue.filter('reverse', function (value) {
+    return value.split('').reverse().join('')
+  })
+
+  new Vue({
+    el: '#example',
+    data: {
+      msg: '他喜欢你'
+    },
+    filters: {
+      wrap (value, left, right) {
+        return left + ' ' + value + ' ' + right
+      }
+    }
+  })
 </script>
 </body>
 </html>
